# chess

./: CMakeLists.txt  chess.cbp  chess.depend  chess.layout  main.cpp
include/: PieceFactory.h  Settings.h  bishop.h  case.h  chesspieces.h  game.h  king.h  knight.h  pawn.h  piece.h  queen.h  rook.h
src/: PieceFactory.cpp  Settings.cpp  bishop.cpp  case.cpp  game.cpp  king.cpp  knight.cpp  pawn.cpp  piece.cpp  queen.cpp  rook.cpp
